Fix gallery margin on small devices

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -56,6 +56,7 @@
  * Misc
  */
 .preview-panel {
+    margin: 0 auto;
     padding: 1rem;
     box-sizing: border-box;
     border: 1px solid $color-initial;
